[gd_scene load_steps=3 format=3 uid="uid://bjy1xnxblu6qu"]

[ext_resource type="Script" path="res://src/stages/end_scene/player_score_graph.gd" id="1_6ttnp"]
[ext_resource type="AudioStream" uid="uid://cd1hw3hh6cqhv" path="res://assets/sfx/sounds/points/032-Switch01.ogg" id="2_d50mk"]

[node name="PlayerScoreGraph" type="MarginContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6ttnp")

[node name="OuterPanel" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(1, 0.894118, 0.470588, 1)

[node name="MarginContainer" type="MarginContainer" parent="OuterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="OuterPanel/MarginContainer"]
layout_mode = 2
color = Color(0.196078, 0.160784, 0.278431, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PlayerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_type_variation = &"HeaderLarge"
text = "score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntervalTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_d50mk")

[connection signal="timeout" from="IntervalTimer" to="." method="_on_interval_timer_timeout"]
